# opencowork-rust

./: .gitignore  BENCHMARKS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.bat  install.ps1
apps/frontend/: biome.json  index.html  package.json  tsconfig.json  vite.config.ts
apps/frontend/src/: App.tsx
apps/frontend/src/styles/: design-system.css
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/delivery/: Cargo.toml
crates/delivery/src/: lib.rs  retry.rs
crates/events/: Cargo.toml
crates/events/src/: lib.rs
crates/media/: Cargo.toml
crates/media/src/: lib.rs
crates/router/: Cargo.toml
crates/router/src/: lib.rs  main.rs
crates/server/: Cargo.toml
crates/server/src/: approvals.rs  audit.rs  config.rs  errors.rs  handlers.rs  lib.rs  main.rs  middleware.rs  server.rs
crates/slack/: Cargo.toml
crates/slack/src/: lib.rs
crates/telegram/: Cargo.toml
crates/telegram/src/: lib.rs  types.rs
crates/text/: Cargo.toml
crates/text/src/: lib.rs
packaging/: winget.yaml
