[workspace]
members = [
    "crates/server",
    "crates/router",
    "crates/telegram",
    "crates/slack",
    "crates/config",
    "crates/media",
    "crates/events",
    "crates/delivery",
    "crates/text",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# HTTP server
axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs", "limit"] }
hyper = { version = "1", features = ["full"] }

# Telegram
teloxide = { version = "0.13", features = ["macros", "webhooks"] }

# Slack
slack-morphism = { version = "3", features = ["hyper", "socket-mode"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
config = "0.14"

# Error handling
thiserror = "2"
anyhow = "1"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Crypto
sha2 = "0.10"
hex = "0.4"

# File system
notify = { version = "7", features = ["macos_kqueue"] }
walkdir = "2"
glob = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Misc
bytes = "1"
dashmap = "6"
parking_lot = "0.12"
arc-swap = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
