[package]
name = "opencowork-router"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "opencowork-router"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }

opencowork-telegram = { path = "../telegram" }
opencowork-slack = { path = "../slack" }
opencowork-delivery = { path = "../delivery" }
opencowork-text = { path = "../text" }

clap = { version = "4", features = ["derive", "env"] }
toml = { workspace = true }
