[package]
name = "opencowork-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "opencowork-server"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
notify = { workspace = true }
walkdir = { workspace = true }
dashmap = { workspace = true }
arc-swap = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }

# Internal crates
opencowork-config = { path = "../config" }
opencowork-events = { path = "../events" }
opencowork-media = { path = "../media" }

# CLI parsing
clap = { version = "4", features = ["derive", "env"] }

# SSE support
tokio-stream = { version = "0.1", features = ["sync"] }

# Rate limiting
governor = "0.8"
